welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:3: error: identifier expected but 'return' found.
def tag(i:Int, nb:Int):return[Int]={
                       ^Diagonal:32: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:35: error: expected start of definition
	override def forward()  {
                 ^Diagonal:38: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:41: error: expected start of definition
	override def backward() {
                 ^Diagonal:44: error: Unmatched closing brace '}' ignored here
}
^